plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    // Java Linting Ecosystem Plugins
    id 'checkstyle'
    id 'pmd'
    id 'com.github.spotbugs' version '6.0.14'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.alphaflow'
version = '0.1.0-SNAPSHOT'
description = 'Alpha Flow Application'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // SpotBugs annotations (allows checking code-level hints & suppressing false positives)
    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.6'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

/* =========================================================================
   Static Analysis & Linting Configurations
   ========================================================================= */

checkstyle {
    toolVersion = '10.15.0'
    ignoreFailures = false // Fails the build on code-style violations
    showViolations = true
    configFile = file("config/checkstyle/google_checks.xml")
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        googleJavaFormat('1.17.0')
    }
}

// 2. PMD: Scans for bugs, dead code, and suboptimal code structures
pmd {
    toolVersion = '7.1.0'
    ignoreFailures = false
    consoleOutput = true
    ruleSets = []
    ruleSetFiles = files("config/pmd/pmd-ruleset.xml")
}

// 3. SpotBugs: Bytecode scanner checking for explicit structural or security flaws
spotbugs {
    ignoreFailures = false
    showProgress = false
    effort = 'max'
    reportLevel = 'medium'
    excludeFilter = file("config/spotbugs/excludeFilter.xml")
}

// Configure static analysis tasks to skip messy XML sheets and strictly output clean HTML dashboards
tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = false
        html.required = true
    }
}

tasks.withType(Pmd).configureEach {
    reports {
        xml.required = false
        html.required = true
    }
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
    reports {
        xml.required = false
        html.required = true
    }
}

/* =========================================================================
   Testing & Test Coverage Verification
   ========================================================================= */

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
            excludes = [
                    'com.alphaflow.api.dtos.*',
                    'com.alphaflow.api.mappers.*',
                    'com.alphaflow.persistence.entities.*',
                    'com.alphaflow.persistence.enums.*',
                    'com.alphaflow.persistence.exceptions.*',
                    'com.alphaflow.persistence.repositories.*'
            ]
        }
    }
}
